# accelerated-arrays

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
cmake/: accelerated-arraysConfig.cmake
src/: assert.hpp  cpu_image.cpp  cpu_image.hpp  cpu_ops.cpp  cpu_ops.hpp  fixed_point.hpp  function.cpp  function.hpp  future.cpp  future.hpp  image.cpp  image.hpp  log.hpp  log_and_assert.cpp  log_and_assert.hpp  opencv_adapter.hpp  queue.cpp  standard_ops.cpp  standard_ops.hpp
src/cpu/: image.cpp  image.hpp  operations.cpp  operations.hpp
src/opengl/: adapters.cpp  adapters.hpp  glfw.cpp  glsl_helpers.hpp  image.cpp  image.hpp  operations.cpp  operations.hpp  read_adapters.cpp  read_adapters.hpp  texture_formats.cpp
test/: CMakeLists.txt  convolution.cpp  fixed_point.cpp  main.cpp  opencv.cpp  opengl.cpp  operations.cpp  thread_pool.cpp
